plugins{
    id 'java'
    id 'application'
}

group 'eu.gobio'
version '1.0-SNAPSHOT'

mainClassName = "eu.gobio.jape.example.Main"
//required for Java 9 and later
applicationDefaultJvmArgs = ["-Djdk.attach.allowAttachSelf=true"]

run{
    standardInput = System.in
}

sourceCompatibility = 1.8
repositories {
    mavenCentral()
    maven {
        url "https://dl.bintray.com/gobio/main"
    }
}

dependencies {
    compile group: 'eu.gobio.jape', name: 'jape', version: '1.0'
    compile group: 'eu.gobio.jape', name: 'jape-simple-explainer', version: '1.0'

    testCompile group: 'junit', name: 'junit', version: '4.12'
}